Navbar gap fix & Navbar brand margin-top fix

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 80%;
+  gap: 2%;
   background: #3A34DF;
   position: fixed;
   width: 100%;
@@ -14,6 +14,7 @@
 .navbar__brand {
   color: #fff;
   text-transform: uppercase;
+  padding-top: 2px;
   font-size: 1.2rem;
   line-height: 1;
   font-weight: 300;
